@@ -1492,7 +1492,7 @@ TurtleFrame.popupGotoHome.text=Zur Startposition scrollen
 TurtleFrame.popupGotoOrigin.text=Zum Ursprung (0,0) scrollen
 TurtleFrame.popupZoom100.text=Zoom auf 100% rücksetzen
 TurtleFrame.popupZoomBounds.text=Auf Gesamtbild zoomen
-TurtleFrame.popupExtendCanvas.text=Gesamtes Bild einbeziehen
+TurtleFrame.popupExtendCanvas.text=Alles Gezeichnete sichtbar machen
 TurtleFrame.popupShowOrigin.text=Koordinatenkreuz zeichnen
 TurtleFrame.popupShowTurtle.text=Schildkröte zeigen
 TurtleFrame.popupShowStatus.text=Statusleiste zeigen
