@@ -1492,7 +1492,7 @@ TurtleFrame.popupGotoHome.text=Scroll to home position
 TurtleFrame.popupGotoOrigin.text=Scroll to origin (0,0)
 TurtleFrame.popupZoom100.text=Reset zoom to 100%
 TurtleFrame.popupZoomBounds.text=Zoom to fit bounds
-TurtleFrame.popupExtendCanvas.text=Extend to picture bounds
+TurtleFrame.popupExtendCanvas.text=Make all drawing visible
 TurtleFrame.popupShowOrigin.text=Show axes of coordinates
 TurtleFrame.popupShowTurtle.text=Show turtle
 TurtleFrame.popupShowStatus.text=Show status bar
