@@ -1477,7 +1477,7 @@ TurtleFrame.popupGotoHome.text=Desplazar hacia el inicio
 TurtleFrame.popupGotoOrigin.text=Desplazar al origen (0,0)
 TurtleFrame.popupZoom100.text=Reponer amplificación a 100%
 TurtleFrame.popupZoomBounds.text=Ajustar dibujo a la ventana
-TurtleFrame.popupExtendCanvas.text=Extender area para caber dibujo
+TurtleFrame.popupExtendCanvas.text=Hacer visible todo el dibujo
 TurtleFrame.popupShowOrigin.text=Dibujar cruz del orígen
 TurtleFrame.popupShowTurtle.text=Mostrar tortuga
 TurtleFrame.popupShowStatus.text=Mostrar barra de estado
