@@ -1422,7 +1422,7 @@ TurtleFrame.popupGotoHome.text=Naar de basispositie scrollen
 TurtleFrame.popupGotoOrigin.text=Naar oorsprong (0,0) scrollen
 TurtleFrame.popupZoom100.text=Herstel zoom naar 100%
 TurtleFrame.popupZoomBounds.text=Passend zoomen
-TurtleFrame.popupExtendCanvas.text=Afbeelding in gebied plaatsen
+TurtleFrame.popupExtendCanvas.text=Maak alle tekeningen zichtbaar
 TurtleFrame.popupShowOrigin.text=Coördinatenkruis tonen
 TurtleFrame.popupShowTurtle.text=Turtle (schildpad) tonen
 TurtleFrame.popupShowStatus.text=Statusbalk tonen
