@@ -31,10 +31,9 @@ package lu.fisch.turtle.elements;
  *
  *      Author          Date            Description
  *      ------          ----            -----------
- *      Kay Gürtzig     2020-12-11      Enh. #704 API extension: draw(Graphics2D, Rectangle),
- *                                      toString(), appendSpecificCSVInfo(StringBuilder, String)
+ *      Kay Gürtzig     2020-12-11      Enh. #704 API extension: toString(),
+ *                                      appendSpecificCSVInfo(StringBuilder, String)
  *      Kay Gürtzig     2020-12-13      Enh. #704 API extension: getFrom(), getTo(), getColor(),
- *                      2020-12-14      move(Dimension)
  *
  ******************************************************************************************************
  *
@@ -43,7 +42,6 @@ package lu.fisch.turtle.elements;
  ******************************************************************************************************///
 
 import java.awt.Color;
-import java.awt.Dimension;
 import java.awt.Graphics2D;
 import java.awt.Point;
 import java.awt.Rectangle;
@@ -79,15 +77,6 @@ public abstract class Element
     public abstract void draw(Graphics2D graphics);
 
     // START KGU#685 2020-12-11: Enh. #704
-    /**
-     * Like {@link #draw(Graphics2D)} but avoids drawing outside the visible area
-     * {@code viewRect} and expands the given {@link Dimension} {@code dim} if this
-     * Element is visible and exceeds it.
-     * @param graphics - the 2D drawing environment
-     * @param viewRect - visible clip of the graphics system (for acceleration)
-     */
-    public abstract void draw(Graphics2D graphics, Rectangle viewRect);
-    
     @Override
     public String toString()
     {
@@ -139,17 +128,5 @@ public abstract class Element
         return color;
     }
     // END KGU#685 2020-12-13
-
-    // START KGU#685 2020-12-14: Enh. #704
-    /**
-     * Moves by the given {@code shift}
-     * @param shift - width and height specify the horizontal and vertical
-     * offset to move the element by
-     */
-    public void move(Dimension shift) {
-        this.from.x += shift.width; this.from.y += shift.height;
-        this.to.x += shift.width; this.to.y += shift.height;
-    }
-    // END KGU#685 2020-12-14
 
 }
